# wiktextract-lemmatization

./: README.md  pyproject.toml
tests/: cyrillic.py  danish.py
wiktextract_lemmatization/: utils.py
